--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="fonts/font.css">
-    <title>Wakanda</title>
+    <title>BL Quiz</title>
 </head>
 
 <body>
-    <h1 id="welcome">come in</h1>
+    <main>
+        <h1 class="welcome">
+            Welcome to the<br/>
+            <span class="ble">BlackLight Experience:</span><br/>
+            <span class="quiz">Le Quiz</span>
+        </h1>
+        <img id="homePic" src="Logo/LogoBL1.png" alt="Logo BL"/>
+        <button onclick="window.location.href='Q1.html'">Come in ...</button>
+    </main>
 </body>
-</html> 
+</html>
