--- a/Q1.html
+++ b/Q1.html
@@ -11,19 +11,19 @@
 <body class="bcgPB">
     <fieldset>
         <legend>Commençons par le commencement</legend>
-        <p class="question">Un peu de géographie tout d'abord …</p>
+        <p class="question">Un peu d'histoire tout d'abord …</p>
             <form class="rep" method="post" action="traitement.php">
                 <p>Où fût fondée cette liste?<br/>
                     <input type="radio" name="lieu" value="JB212" id="JB212"/>
                         <label class="touchRep" for="JB212">JB 212</label><br/>
                     <input type="radio" name="lieu" value="JB412" id="JB412"/>
-                        <label class="touchRep" for="JB412">JB 212</label><br/>
+                        <label class="touchRep" for="JB412">JB 412</label><br/>
                     <input type="radio" name="lieu" value="JB633" id="JB633"/>
-                        <label class="touchRep" for="JB633">JB 212</label><br/>
+                        <label class="touchRep" for="JB633">JB 633</label><br/>
                     <input type="radio" name="lieu" value="JB933" id="JB933"/>
-                        <label class="touchRep" for="JB933">JB 212</label><br/>
+                        <label class="touchRep" for="JB933">JB 933</label><br/>
                 </p>
             </form>
-        <button class="next" onclick="window.location.href='Q2.html'">Question suivante</button>
+        <button class="next" onclick="window.location.href='fin.html'">Question suivante</button>
     </fieldset>
 </body>
