--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <span class="ble">BlackLight Experience:</span><br/>
             <span class="quiz">Le Quiz</span>
         </h1>
-        <img id="homePic" src="Logo/LogoBL1.png" alt="Logo BL"/>
+        <div id="superposition">
+            <img id="homePic1" src="Logo/LogoBL.png" alt="Logo BL"/>
+            <img id="homePic2" src="Logo/LogoBLneg.png" alt="Logo BL"/>
+        </div>
         <button onclick="window.location.href='Q1.html'">Come in ...</button>
     </main>
 </body>
