--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 
 <body>
     <main>
-        <h1 class="welcome">
-            Welcome to the<br/>
-            <span class="ble">BlackLight Experience:</span><br/>
-            <span class="quiz">Le Quiz</span>
-        </h1>
-        <div id="superposition">
-            <img id="homePic1" src="Logo/LogoBL.png" alt="Logo BL"/>
-            <img id="homePic2" src="Logo/LogoBLneg.png" alt="Logo BL"/>
+        <div id="home">
+                <h1 class="welcome">
+                    Welcome to the<br/>
+                    <span class="ble">BlackLight Experience:</span><br/>
+                    <span class="quiz">Le Quiz</span>
+                </h1>
+                <div class="superposition">
+                    <img id="pic1 transition" src="Logo/LogoBL.png" alt="Logo BL"/>
+                    <img id="homePic2" src="Logo/LogoBLneg.png" alt="Logo BL"/>
+                </div>
+                <button class="toNextForm">Come in ...</button>
         </div>
-        <button onclick="window.location.href='Q1.html'">Come in ...</button>
+
     </main>
+    <script src="script/main.js"></script>
 </body>
 </html>
