modifs qui marchent pas

--- a/fin.html
+++ b/fin.html
@@ -8,8 +8,8 @@
     <title>BL Quiz</title>
 </head>
 
-<body class="bcgPB">
-    <fieldset>
+<body>
+    <fieldset id="toEnd">
         <legend>C'est fini!</legend>
         <p class="centre">Merci d'avoir répondu à ce quiz et rdv
             <span id="date"><br/> le ... à ..h..</span>
