--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 
 <body>
-    <main>
+    <main class="bcgMain">
         <div id="home">
-                <h1 class="welcome">
-                    Welcome to the<br/>
-                    <span class="ble">BlackLight Experience:</span><br/>
-                    <span class="quiz">Le Quiz</span>
-                </h1>
-                <div class="superposition">
-                    <img id="pic1 transition" src="Logo/LogoBL.png" alt="Logo BL"/>
-                    <img id="homePic2" src="Logo/LogoBLneg.png" alt="Logo BL"/>
-                </div>
-                <button class="toNextForm">Come in ...</button>
+            <h1 class="welcome">
+                Welcome to the<br/>
+                <span class="ble">BlackLight Experience:</span><br/>
+                <span class="quiz">Le Quiz</span>
+            </h1>
+            <div id="empiler"><img  id="pic1" src="Logo/LogoBL.png" alt="Logo BL"/>   </div>
+            <div id="next"><button>Come in ...</button></div>
         </div>
-
     </main>
     <script src="script/main.js"></script>
 </body>
