fix issue about reload && page heigth

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                 <span class="ble">BlackLight Experience:</span><br/>
                 <span class="quiz">Le Quiz</span>
             </h1>
-            <div id="empiler"><img  id="pic1" src="Logo/LogoBL.png" alt="Logo BL"/>   </div>
+            <div id="imageContainer">
+                <img id="pic1" src="Logo/LogoBL.png" alt="Logo BL"/>
+                <img id="pic2" src="Logo/LogoBLneg.png" alt="Logo BL"/>
+            </div>
+
             <div id="next"><button>Come in ...</button></div>
         </div>
     </main>
