--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="fonts/font.css">
+    <link rel="stylesheet" href="fonts/font.css">
     <title>BL Quiz</title>
 </head>
 
